<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/app_margin_medium"
    app:cardCornerRadius="16dp"
    app:cardElevation="@dimen/app_margin_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pokemon_name"
            style="@style/card_pokemon_title_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/app_margin_medium"
            android:layout_marginTop="@dimen/app_margin_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Pikachu" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pokemon_base_exp"
            style="@style/card_pokemon_exp_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name"
            tools:text="Base exp: 120" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pokemon_title_height"
            style="@style/card_pokemon_medium_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/app_margin_medium"
            android:layout_marginTop="@dimen/app_margin_medium"
            android:text="@string/card_pokemon_height"
            app:layout_constraintBottom_toTopOf="@+id/tv_pokemon_title_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_base_exp"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pokemon_height"
            style="@style/card_pokemon_forms_list_item_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="120"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_title_height"
            app:layout_constraintStart_toEndOf="@+id/tv_pokemon_title_height"
            app:layout_constraintTop_toTopOf="@+id/tv_pokemon_title_height" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pokemon_title_weight"
            style="@style/card_pokemon_medium_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/app_margin_medium"
            android:text="@string/card_pokemon_weight"
            app:layout_constraintBottom_toTopOf="@+id/tv_pokemon_title_forms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_title_height" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pokemon_weight"
            style="@style/card_pokemon_forms_list_item_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="120"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pokemon_title_weight"
            app:layout_constraintStart_toEndOf="@+id/tv_pokemon_title_weight"
            app:layout_constraintTop_toTopOf="@+id/tv_pokemon_title_weight" />

        <ImageView
            android:id="@+id/iv_pokemon_image"
            android:layout_width="@dimen/card_iv_width"
            android:layout_height="@dimen/card_iv_height"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_pokemon_base_exp"
            app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_name"
            tools:src="@drawable/pikachu" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pokemon_title_forms"
            style="@style/card_pokemon_medium_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_medium"
            android:text="@string/card_pokemon_forms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_pokemon_image" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_pokemon_forms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin_medium"
            android:layout_marginBottom="@dimen/app_margin_medium"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_title_forms"
            tools:itemCount="3"
            tools:listitem="@layout/card_item_pokemon_forms" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pokemon_title_abilities"
            style="@style/card_pokemon_medium_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_medium"
            android:text="@string/card_pokemon_abilities"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcv_pokemon_forms" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_pokemon_abilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin_medium"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_title_abilities"
            tools:itemCount="3"
            tools:listitem="@layout/card_item_pokemon_forms" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_pokemon_title_held_items"
            style="@style/card_pokemon_medium_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_medium"
            android:text="@string/card_pokemon_held_items"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcv_pokemon_abilities" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_pokemon_held_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_margin_medium"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@+id/tv_pokemon_title_held_items"
            app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_title_held_items"
            tools:itemCount="3"
            tools:listitem="@layout/card_item_pokemon_forms" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_card_add_in_favorite"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_medium"
            android:text="@string/card_btn_favorite_add"
            android:textColor="@color/red"
            app:cornerRadius="@dimen/material_button_corner_radius"
            app:icon="@drawable/ic_favorite_filled_24dp"
            app:iconPadding="-24dp"
            app:iconTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcv_pokemon_held_items"
            app:rippleColor="@color/red"
            app:strokeColor="@color/red"
            app:boxStrokeWidth="@dimen/material_button_stroke_width" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>